--- a/main.ipynb
+++ b/main.ipynb
@@ -2,9 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: networkx in c:\\users\\rukes\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (2.8.8)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: numpy in c:\\users\\rukes\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (1.23.4)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: tqdm in c:\\users\\rukes\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (4.64.1)\n",
+      "Requirement already satisfied: colorama in c:\\users\\rukes\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from tqdm) (0.4.6)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\rukes\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (3.6.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\rukes\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from matplotlib) (21.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\rukes\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\rukes\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from matplotlib) (4.38.0)\n",
+      "Requirement already satisfied: numpy>=1.19 in c:\\users\\rukes\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from matplotlib) (1.23.4)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\rukes\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from matplotlib) (1.0.6)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\rukes\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from matplotlib) (9.3.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\rukes\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\rukes\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from matplotlib) (1.4.4)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\rukes\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from matplotlib) (3.0.9)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\rukes\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "# Install packages\n",
     "%pip install networkx\n",
@@ -15,12 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# The starter code is short and simple, take a look!\n",
     "from starter import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Phase 0 - Testing"
    ]
   },
   {
@@ -127,7 +160,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.1 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -141,7 +174,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "41830064d40a3adadf4e30d48b4c5e8ce908bf52089218bbfc43d727048f23e0"
+   }
   }
  },
  "nbformat": 4,
